# Tuwa-API

./: .env.example  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  cloudbuild.yaml  migrations.dockerfile  production.dockerfile  rustfmt.toml
.github/workflows/: ci.yml
crates/app/: Cargo.toml
crates/app/src/: database.rs  main.rs  schoology.rs  utils.rs
crates/app/src/utils/: mod.rs  schoology_link.rs  schoology_request_tokens.rs  sessions.rs  users.rs
crates/app/src/v1/: mod.rs  types.rs
crates/app/src/v1/schoology/: login.rs  mod.rs  request_token.rs  user.rs
crates/migrations/: Cargo.toml
crates/migrations/src/: lib.rs  m20230930_000001_create_users.rs  m20231008_000001_schoology_request_tokens.rs  m20231009_000001_schoology_link.rs  m20231010_000001_sessions.rs
crates/orm/: Cargo.toml
crates/orm/src/: lib.rs  prelude.rs  schoology_link.rs  schoology_request_tokens.rs  sessions.rs  users.rs
crates/schoology/: Cargo.toml
crates/schoology/src/: lib.rs  oauth.rs  proto.rs  users.rs
docs/api/: index.md
docs/api/v1/: index.md
docs/api/v1/schoology/: index.md  login.md  request_token.md  user.md
docs/development/: database.md  env.md  index.md
