[package]
name = "tuwa-api"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.4.0"
dotenv = "0.15.0"
log = "0.4.20"
orm = { version = "0.1.0", path = "../orm" }
pretty_env_logger = "0.5.0"
sea-orm = { version = "0.12.3", features = ["sqlx-postgres", "runtime-tokio-rustls", "macros"] }
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
tokio = { version = "1.32.0", features = ["full"] }
