[package]
name = "app"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-cors = "0.6.4"
actix-remote-ip = "0.1.0"
actix-web = "4.4.0"
base64 = "0.21.4"
chrono = "0.4.31"
dotenv = "0.15.0"
glob-match = "0.2.1"
hmac = "0.12.1"
log = "0.4.20"
once_cell = "1.18.0"
orm = { version = "0.1.0", path = "../orm" }
pretty_env_logger = "0.5.0"
ring = "0.17.2"
schoology = { version = "0.1.0", path = "../schoology" }
sea-orm = { version = "0.12.3", features = ["sqlx-postgres", "runtime-tokio-rustls", "with-uuid", "macros"] }
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
sha2 = "0.10.8"
tokio = { version = "1.32.0", features = ["full"] }
tokio-cron-scheduler = { version = "0.9.4", features = ["signal"] }
uuid = { version = "1.4.1", features = ["v4"] }
