[package]
name = "schoology"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.21.4"
chrono = "0.4.31"
hmac = "0.12.1"
log = "0.4.20"
once_cell = "1.18.0"
reqwest = { version = "0.11.22", features = ["rustls-tls"], default-features = false }
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
serde_urlencoded = "0.7.1"
sha2 = "0.10.8"
url = "2.4.1"
urlencoding = "2.1.3"
uuid = { version = "1.4.1", features = ["v4"] }
